# intent-layer

./: .gitignore  CLAUDE.md  README.md
eval-harness/: .gitignore  AGENTS.md  README.md  pyproject.toml
eval-harness/.index-cache-preserve/: cache-manifest.json
eval-harness/lib/: __init__.py  agent_config.py  budget.py  claude_runner.py  cli.py  docker_runner.py  git_ops.py  git_scanner.py  index_cache.py  models.py  prompt_builder.py  reporter.py  stats.py  task_runner.py
eval-harness/results/: 2026-01-23-144022.json  2026-01-23-144022.md  2026-02-16-133336.json  2026-02-16-133336.md  2026-02-16-134621.json  2026-02-16-134621.md  2026-02-16-150803.json  2026-02-16-150803.md  2026-02-16-155213.json  2026-02-16-155213.md  2026-02-16-160655.json  2026-02-16-160655.md  2026-02-16-172007.json  2026-02-16-172007.md  2026-02-16-173014.json  2026-02-16-173014.md  2026-02-16-173750.json  2026-02-16-173750.md  2026-02-16-173936.json  2026-02-16-173936.md  2026-02-16-174503.json  2026-02-16-174503.md  2026-02-16-201138.json  2026-02-16-201138.md  2026-02-16-205339.json  2026-02-16-205339.md  2026-02-16-222458.json  2026-02-16-222458.md  2026-02-16-consolidated.md  2026-02-17-095051.json  2026-02-17-095051.md  2026-02-17-105514.json  2026-02-17-105514.md  2026-02-17-125440.json  2026-02-17-125440.md  2026-02-17-145755.json  2026-02-17-145755.md  2026-02-17-153018.json  2026-02-17-153018.md  2026-02-17-153037.json  (+48 more)
eval-harness/scripts/: monitor-eval.sh  push-on-read-hook.sh  tail-logs.py
eval-harness/tasks/: ansible.yaml  express.yaml  fastmcp-focused.yaml  fastmcp.yaml  (+16 more)
(+336 files in other folders)
