[project]
name = "eval-harness"
version = "0.1.0"
description = "A/B eval harness for Claude skills"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
eval-harness = "lib.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
